--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@babel/preset-env": "^7.16.8",
         "babel-loader": "^8.2.3",
         "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
         "http-server": "^14.1.0",
         "webpack": "^5.66.0",
         "webpack-bundle-analyzer": "^4.5.0",
@@ -35,5 +36,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/piecioshka/boilerplate-webpack-babel"
+    },
+    "dependencies": {
+        "pixi.js": "^6.2.2"
     }
 }
